--- a/src/assets/scss/boldgrid/footer/_attribution-links.scss
+++ b/src/assets/scss/boldgrid/footer/_attribution-links.scss
@@ -27,6 +27,9 @@
 				border: 0;
 			}
 		}
+		&:first-child {
+			padding-left: 0;
+		}
 	}
 	@media only screen and (min-width : 768px) {
 		padding-left: 0;
